--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/fortify": "^1.13",
         "laravel/framework": "^8.75",
-        "laravel/sanctum": "^2.11",
+        "laravel/sanctum": "*",
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.10",
         "twbs/bootstrap-icons": "^1.9"
